compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/ExpectedNestedClass.kt
// p.B.Nested

package p

expect class B {
    class Nested {}
}